<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/colorBackground"
        android:fitsSystemWindows="true"
        android:id="@+id/coordinator">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:elevation="5dp"
            android:layout_centerHorizontal="true"
            android:textSize="45sp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorOnSurface"
            android:layout_marginTop="20dp"
            android:layout_below="@id/credit_card"
            android:gravity="center"
            android:layout_marginRight="16dp"
            android:id="@+id/title"
            android:text="@string/welcome_summary"
            android:textStyle="bold" />

        <ImageView
            android:layout_height="280dp"
            android:layout_width="280dp"
            android:src="@drawable/ic_credit_card_home"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:id="@+id/credit_card" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:elevation="5dp"
            android:textAppearance="?textAppearanceLabelSmall"
            android:layout_above="@+id/button_acept"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/colorOnSurface"
            android:id="@+id/policy"
            android:text="@string/text_terminos" />

        <Button
            android:layout_height="56dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="40dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:id="@+id/button_acept"
            android:text="@string/continuar_buttom" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
